# z-wear-project

./: .gitignore  README.md  requirements.txt  setup_build_env.sh  z-wear_env.yml
.github/workflows/: automated_testing.yml  build_project.yml  cleanup_artifacts.yml  track_diff_size.yml
application/: codesizes.py
application/app/: CMakeLists.txt  Kconfig  prj.conf
application/app/child_image/: mcuboot.conf  zwear.pem
application/app/drivers/: CMakeLists.txt  Kconfig
application/app/drivers/lc709204/: CMakeLists.txt  Kconfig  lc709204.c  lc709204.h
application/app/drivers/ldc1612/: CMakeLists.txt  Kconfig  ldc1612.c  ldc1612.h
application/app/drivers/mc3672/: CMakeLists.txt  Kconfig  mc3672.c  mc3672.h  mc3672_trigger.c
application/app/dts/bindings/sensor/: mcube,mc3672.yaml  onnn,lc709204.yaml  ti,ldc1612.yaml
application/app/info/: authentication_key.txt  fw_ncs_version.txt  version.txt
application/app/src/: main.c  version.h
application/app/src/ble/: ble_interface.c  ble_interface.h
application/app/src/ble/authentication/: authentication.c  authentication.h
application/app/src/ble/services/: authentication_service.c  authentication_service.h
application/app/src/sensors/: sensor_interface.c  sensor_interface.h
application/app/src/sensors/battery/: battery.c  battery.h
application/app/src/settings/: settings_storage.c  settings_storage.h
application/app/tests/authentication/: prj.conf  testcase.yaml
application/app/tests/authentication/src/: main.c
application/app/tests/bluetooth/interface/: CMakeLists.txt  prj.conf  testcase.yaml
application/app/tests/bluetooth/interface/src/: main.c  util_test_ble.c  util_test_ble.h
application/app/tests/bluetooth/services/: CMakeLists.txt  prj.conf  testcase.yaml
application/app/tests/bluetooth/services/src/: main.c  test_authentication_service.c  util_test_services.c  util_test_services.h
application/app/tests/sensors/battery/: CMakeLists.txt  prj.conf  testcase.yaml
application/app/tests/sensors/battery/src/: main.c
application/app/tests/sensors/interface/: CMakeLists.txt  prj.conf  testcase.yaml
application/app/tests/sensors/interface/src/: main.c  test_notify_interface.c  test_sensor_control.c  util_test_sensor.c  util_test_sensor.h
application/app/tests/settings/storage/: CMakeLists.txt  prj.conf  testcase.yaml
application/app/tests/settings/storage/src/: main.c  util_test_settings.c  util_test_settings.h
